tests/error/right_mutable.gw
// [contains] right-side operand is not mutable
 2 => 1;
